--- a/styles/architect.css
+++ b/styles/architect.css
@@ -9,7 +9,13 @@ font-family: 'Roboto Slab', serif;
 font-family: 'Work Sans', sans-serif;
   }
   .btn-primary{
-    
+    border-radius: 8px;
+    color: #fff;
+    background-color: #FF900E;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    cursor: pointer;
+    border: none;
   }
   header{
     background-color: rgba(255, 144, 14, 0.10);
@@ -57,3 +63,26 @@ align-items: center;
     color: #727272;
 
   }
+  .banner img{
+    margin-top: 20px;
+    width: 100%;
+  }
+/* responsive media queries  */
+/* mobile devices  */
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+ /* Tablet devices or medium devices  */
+ @media screen and (min-width:576px) and (max-width:960px){
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+ }
