--- a/styles/architect.css
+++ b/styles/architect.css
@@ -17,6 +17,13 @@ font-family: 'Work Sans', sans-serif;
     cursor: pointer;
     border: none;
   }
+  .section-title{
+    font-size: 2.5em;
+    font-weight: 700;
+    color: #131313;
+
+  }
+  /* header section start  */
   header{
     background-color: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
@@ -26,12 +33,7 @@ font-family: 'Work Sans', sans-serif;
 justify-content: space-between;
 align-items: center;
   }
-  .nav-title{
-    font-size: 2.5em;
-    font-weight: 700;
-    color: #131313;
 
-  }
   nav > ul{
     display: flex;
     
@@ -99,7 +101,30 @@ main{
     color: #FF900E;
     font-weight: 700;
 }
+/* facts section  */
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+border: 1px solid #FF900E;
+text-align: center;
+padding:  30px;
 
+
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 /* responsive media queries  */
 /* mobile devices  */
