--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,159 +1,243 @@
-  /* Use google fonts Work Sens  */
-  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Handlee&family=Open+Sans:wght@400;700;800&family=Roboto+Slab&family=Work+Sans:wght@400;500;600;700;800&display=swap');
-  /* shared styles  */
-  *{
-    font-family: 'Dancing Script', cursive;
-font-family: 'Handlee', cursive;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Roboto Slab', serif;
-font-family: 'Work Sans', sans-serif;
-  }
-  .btn-primary{
-    border-radius: 8px;
-    color: #fff;
-    background-color: #FF900E;
-    padding: 20px 25px;
-    font-size: 1.25rem;
-    cursor: pointer;
-    border: none;
-  }
-  .section-title{
-    font-size: 2.5em;
-    font-weight: 700;
-    color: #131313;
+/* Use google fonts Work Sens  */
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Handlee&family=Open+Sans:wght@400;700;800&family=Roboto+Slab&family=Work+Sans:wght@400;500;600;700;800&display=swap");
+/* shared styles  */
+* {
+  font-family: "Dancing Script", cursive;
+  font-family: "Handlee", cursive;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto Slab", serif;
+  font-family: "Work Sans", sans-serif;
+}
+.btn-primary {
+  border-radius: 8px;
+  color: #fff;
+  background-color: #ff900e;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  cursor: pointer;
+  border: none;
+}
+.section-title {
+  font-size: 2.5em;
+  font-weight: 700;
+  color: #131313;
+}
+/* header section start  */
+header {
+  background-color: rgba(255, 144, 14, 0.1);
+  padding: 50px 240px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  }
-  /* header section start  */
-  header{
-    background-color: rgba(255, 144, 14, 0.10);
-    padding: 50px 240px;
-  }
-  nav{
-    display: flex;
-justify-content: space-between;
-align-items: center;
-  }
-
-  nav > ul{
-    display: flex;
-    
-  }
-  nav li{
-    list-style: none;
-    margin-right: 30px;
-    font-weight: 500;
-    font-size: 1rem;
-  }
-  nav li a{
-    text-decoration: none;
-    color: #424242;
-  }
-  /* banner styles  */
-  .banner-content{
-    max-width: 800px;
-    text-align: center;
-    margin: 0px auto;
-  }
-  .banner-title{
-    font-size: 4rem;
-    font-weight: 700;
-    color:#131313 ;
-    text-align: center;
-
-  }
-  .text-light-gray{
-    color: #727272;
-
-  }
-  .banner img{
-    margin-top: 20px;
-    width: 100%;
-  }
-
+nav > ul {
+  display: flex;
+}
+nav li {
+  list-style: none;
+  margin-right: 30px;
+  font-weight: 500;
+  font-size: 1rem;
+}
+nav li a {
+  text-decoration: none;
+  color: #424242;
+}
+/* banner styles  */
+.banner-content {
+  max-width: 800px;
+  text-align: center;
+  margin: 0px auto;
+}
+.banner-title {
+  font-size: 4rem;
+  font-weight: 700;
+  color: #131313;
+  text-align: center;
+}
+.text-light-gray {
+  color: #727272;
+}
+.banner img {
+  margin-top: 20px;
+  width: 100%;
+}
 
 /* main styles  */
-main{
-    max-width: 1440px;
-    margin: 70px auto;
+main {
+  max-width: 1440px;
+  margin: 70px auto;
 }
-.teams-container{
-    display: flex;
-    align-items: center;
+.teams-container {
+  display: flex;
+  align-items: center;
 }
-.teams-img-container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 1.5rem;
+.teams-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
 }
-.teams-content{
-    padding-left: 70px;
-    padding-right: 70px;
+.teams-content {
+  padding-left: 70px;
+  padding-right: 70px;
 }
-.teams-title{
-    font-size: 2.5rem;
+.teams-title {
+  font-size: 2.5rem;
 }
-.teams-title .quick-list{
-    font-size: 2.5rem;
-    font-weight: 500;
+.teams-title .quick-list {
+  font-size: 2.5rem;
+  font-weight: 500;
 }
-.teams-title .text-features{
-    font-size: 2.5rem;
-    color: #FF900E;
-    font-weight: 700;
+.teams-title .text-features {
+  font-size: 2.5rem;
+  color: #ff900e;
+  font-weight: 700;
+}
+/* features section  */
+.features {
+  display: flex;
+  margin-top: 130px;
+  gap: 100px;
+}
+.features-content .card {
+  margin: 20px;
+  padding: 30px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.features .section-title{
+  border-left: 5px solid #ff900e;
+  padding-left: 15px;
+}
+.feature-image img{
+/* position: relative; */
+height: 90%;
+margin-left: 90px;
+}
+.ten-years-badge{
+  border-radius: 8px;
+  background: #FF900E;
+  color: white;
+  width: 342px;
+  padding: 40px;
+  text-align: center;
+  /* position: absolute;  */
+  position: relative;
+  bottom: 150px;
+}
+.ten-years-badge h2{
+  font-size: 4rem;
+  margin: 0;
+}
+.ten-years-badge p{
+  font-size: 1.5rem;
+
 }
 /* facts section  */
-.facts-card-container{
-    display: flex;
-    justify-content: space-around;
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
 }
-.facts-card-container .card{
-    border-radius: 8px;
-border: 1px solid #FF900E;
-text-align: center;
-padding:  30px;
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 30px;
+}
+.facts-card-container .card-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 5px;
+}
+.facts-card-container .card-stats {
+  font-size: 2.8rem;
+  color: #424242;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.text-light-gray2 {
+  max-width: 542px;
+  margin-bottom: 100px;
+}
 
+/* sponsors style  */
 
+.sponsors {
+  text-align: center;
 }
-.facts-card-container .card-title{
-    font-weight: 600;
-    font-size: 1.25rem;
-    margin-top: 5px;
+.sponsors-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
 }
-.facts-card-container .card-stats{
-    font-size: 2.8rem;
-    color: #424242;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.sponsors-img-container img {
+  width: 165px;
+}
+
+.footer-section{
+  text-align: center;
+  padding: 39px 400px;
+  background-color: #FFF4E7;
 }
 
 /* responsive media queries  */
 /* mobile devices  */
-@media screen and (max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav,
-    .teams-container
-    {
-        flex-direction: column;
-    }
-    .teams-img-container{
-        grid-template-columns: 1fr
-    }
-    .teams-content{
-        padding-left: 20px;
-        padding-right: 20px;
-    }
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav,
+  .teams-container,
+  .facts-card-container,
+  .sponsors-img-container,
+  .features {
+    flex-direction: column;
+  }
+  .feature-image img{
+    width: 100%;
+    margin-left: 0;
+  }
+  .ten-years-badge{
+position:static;
+max-width: 300px;
 
+  }
+  .teams-img-container {
+    grid-template-columns: 1fr;
+  }
+  .teams-content .facts-card-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .facts-card-container {
+    gap: 20px;
+  }
+  .section-title,
+  .text-light-gray2,
+  {
+    text-align: center;
+  }
+  .footer-section{
+    text-align: center;
+    padding:0px 0px;
+
+  }
 }
 
- /* Tablet devices or medium devices  */
- @media screen and (min-width:576px) and (max-width:960px){
-    header{
-        padding: 50px;
-    }
-    .teams-container,
-    nav{
-        flex-direction: column;
-    }
- }
+/* Tablet devices or medium devices  */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 50px;
+  }
+  .sponsors-img-container,
+  .teams-container,
+  nav {
+    flex-direction: column;
+  }
+}
